# colrev-sync

./: .gitignore  pyproject.toml
.github/workflows/: publish_pypi.yml
colrev_sync/: sync.py  update_hook.py
src/: sync.py
