[tool.poetry]
name = "colrev-sync"
description = "CoLRev package for sync"
version = "0.2.0"
license = "MIT"
authors = [
    "Gerit Wagner <gerit.wagner@uni-bamberg.de>"
]
repository = "https://github.com/CoLRev-Environment/colrev-sync"

[tool.poetry.scripts]
colrev-sync = "src.sync:main"
colrev-hooks-update = "colrev_sync.update_hook:main"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
colrev = "^0.13.2"

[tool.colrev]
colrev_doc_description = "Sync"
colrev_doc_link = "README.md"
search_types = []

[tool.mypy]
python_version = 3.13
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0", "cython<3.0"]
build-backend = "poetry.core.masonry.api"
