[project]
name = "colrev-sync"
description = "CoLRev package for sync"
version = "0.4.0"
license = {text = "MIT"}
requires-python = ">=3.10, <4"
authors = [
    { name = "Gerit Wagner", email = "gerit.wagner@uni-bamberg.de" },
]
dependencies = [
    "colrev>=0.13.2"
]

[project.urls]
repository = "https://github.com/CoLRev-Environment/colrev-sync"

[project.scripts]
colrev-sync = "colrev_sync.sync:main"
colrev-sync-stats = "colrev_sync.sync:stats"
colrev-sync-hooks-update = "colrev_sync.update_hook:main"

[tool.hatch.build.targets.wheel]
packages = ["colrev_sync"]

[tool.colrev]
colrev_doc_description = "Sync"
colrev_doc_link = "README.md"
search_types = []

[tool.mypy]
python_version = 3.13
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
